# KeySG

./: README.md  environment.yaml  main_pipeline.py  pyproject.toml
config/: main_pipeline.yaml
config/evaluation/: scanqa_eval.yaml
dataloader/: replica.py
hovfun/: cli.py
hovfun/rag/: graph_context_retriever.py  graph_rag_utils.py  visual_context_retriever.py
hovfun/scene_descriptor/: vlm_provider.py
hovfun/scene_segmentor/: extract_nodes.py
hovfun/utils/: load_utils.py  vis_utils.py
hovfun/visualization/: visualizer.py
keysg/: graph.py
keysg/rag/: __init__.py  graph_context_retriever.py  graph_rag_utils.py  query_analysis.py
keysg/scene_segmentor/: extract_nodes.py
keysg/utils/: load_utils.py  logging_setup.py  vis_utils.py
keysg/visualization/: __init__.py  visualizer.py
models/gsam2/: gsam2.py
models/llm/: gpt_vlm.py  openai_api.py  schemas.py
scripts/: eval_helpers.py  nr3d_eval.py
